applications/openeuler-statistics-ltscontribution/ltscontribution-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-ltscontribution
spec:
  selector:
    component: openeuler-ltscontribution-website
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
